@@ -6,6 +6,7 @@
  - Fix memory leak when failing to connect.
  - Improve introductory docs for connections and transactions.
  - Re-do entire documentation build.  No more Sphinx in readthedocs. (#802)
+ - No more autodetection of doxygen etc.  Run it, or don't.
 7.9.0
  - Support standard libraries without `std::basic_string<std::byte>` etc.
  - `std::basic_string<std::byte` becomes `pqxx::bytes`. (#726)
